k8s/k8s-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: simple-taskapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: fastapi
        image: nukano0522/simple-taskapp-fastapi:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: simple-taskapp
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
